applications/proxmox/proxmox-healthcheck.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pve-healthcheck
  namespace: proxmox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pve-healthcheck
  template:
    metadata:
      labels:
        app: pve-healthcheck
    spec:
      serviceAccountName: pve-healthcheck
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: updater
          image: python:3-alpine
          command:
            - python3
            - -c
            - |
              [...]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
